13번째 Commit이다. ===> Volley를 통해서 클릭해서 보는 것이 가능하고 수정 및 삭제를 구현하였다. 다만 데이터가 중복되어서 나타나는 문제점이 있다..
1) 데이터가 중복되어서 나타나는 문제점 고치기
2) 게시판 새로 생성하는 기능 구현하기!!!

--- a/src/main/res/layout/fragment4.xml
+++ b/src/main/res/layout/fragment4.xml
@@ -4,9 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:layout_marginTop="60dp">
 
-    <LinearLayout
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/board_recyclerView">
+
+    </androidx.recyclerview.widget.RecyclerView>
+    <!--<LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -26,28 +34,15 @@
             android:layout_marginLeft="15dp"
             android:background="#E8FFE8"/>
 
-       <!-- <SearchView
+       &lt;!&ndash; <SearchView
             android:id="@+id/search"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
-            android:queryHint="검색"/>-->
+            android:queryHint="검색"/>&ndash;&gt;
     </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/board_recyclerView">
-
-        </androidx.recyclerview.widget.RecyclerView>
-    </LinearLayout>
-
+-->
 
 
 
