15번째 Commit이다. ===> Volley를 통해서 게시판 글 생성 및 수정 그리고 삭제까지 모두 구현을 하였다. 다만 문제점은 글 생성 및 수정 그리고 삭제를 했을 때 바로 Update가 되지가 않는다. (즉 바로 Reload가 되지가 않는다.)

--- a/src/main/res/layout/fragment4.xml
+++ b/src/main/res/layout/fragment4.xml
@@ -5,15 +5,43 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:layout_marginTop="60dp">
+    >
 
-
-    <androidx.recyclerview.widget.RecyclerView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/board_recyclerView">
+        android:orientation="vertical"
+        android:layout_marginTop="60dp">
 
-    </androidx.recyclerview.widget.RecyclerView>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/board_recyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginBottom="5dp">
+
+            </androidx.recyclerview.widget.RecyclerView>
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/Insert_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentBottom="true"
+                app:fabSize="auto"
+                app:srcCompat="@drawable/ic_add_black_24dp"
+                app:useCompatPadding="true" />
+        </RelativeLayout>
+    </LinearLayout>
+
+
+
     <!--<LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -34,7 +62,7 @@
             android:layout_marginLeft="15dp"
             android:background="#E8FFE8"/>
 
-       &lt;!&ndash; <SearchView
+    <SearchView
             android:id="@+id/search"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
