--- a/src/main/res/layout/activity_board.xml
+++ b/src/main/res/layout/activity_board.xml
@@ -1,157 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/drawer_layout"
-    android:layout_width="match_parent" android:layout_height="match_parent"
-    android:fitsSystemWindows="true" tools:openDrawer="start">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <androidx.coordinatorlayout.widget.CoordinatorLayout
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        >
+        android:layout_height="wrap_content"
+        android:text="내용보기"
+        android:textSize="20dp"
+        android:layout_marginBottom="10dp"
+        android:layout_marginTop="10dp"
+        android:gravity="center"
+        android:id="@+id/board_textView"/>
 
-        <com.google.android.material.appbar.AppBarLayout
-            android:id="@+id/appBarLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:theme="@style/AppTheme.AppBarOverlay">
+    <EditText
+        android:id="@+id/title_edit"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="제목: Sample1"
+        android:layout_below="@id/board_textView"
+        />
 
-        </com.google.android.material.appbar.AppBarLayout>
-
-        <RelativeLayout
-            android:id="@+id/relativeLayout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior">
-
-            <FrameLayout
-                android:id="@+id/container"
-                android:layout_width="match_parent"
-                android:layout_height="673dp"
-                android:layout_above="@+id/bottom_navigation"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:layout_marginEnd="0dp"
-                android:layout_marginRight="0dp"
-                android:layout_marginBottom="2dp">
-
-            </FrameLayout>
-
-            <com.google.android.material.bottomnavigation.BottomNavigationView
-                android:id="@+id/bottom_navigation"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentBottom="true"
-                android:layout_marginEnd="0dp"
-                android:layout_marginRight="0dp"
-
-                android:layout_marginBottom="2dp"
-                app:itemBackground="@color/custom_2"
-                app:itemIconSize="@android:dimen/app_icon_size"
-                app:itemIconTint="@drawable/item_color"
-                app:itemTextColor="@drawable/item_color"
-                app:labelVisibilityMode="unlabeled"
-                app:menu="@menu/menu_bottom" />
-
-        </RelativeLayout>
-
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="#FFFFFF"
-            app:layout_anchor="@+id/appBarLayout"
-            app:layout_anchorGravity="center"
-            app:popupTheme="@style/AppTheme.PopupOverlay"
-
-            />
-
-        <ImageView
-            android:id="@+id/home_btn"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_alignParentTop="false"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="false"
-            android:layout_marginRight="10dp"
-            app:srcCompat="@drawable/ic_home"
-            app:layout_anchor="@+id/toolbar"
-            app:layout_anchorGravity="end|center" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_below="@id/title_edit"
+        android:id="@+id/update_linearLayout"
+        android:layout_marginBottom="15dp">
 
         <TextView
-            android:id="@+id/title"
+            android:id="@+id/nickName_edit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:gravity="center"
-            android:text="정신건강앱"
-            android:textSize="20dp"
-            android:textStyle="bold"
-            app:layout_anchor="@+id/toolbar"
-            app:layout_anchorGravity="center" />
+            android:layout_marginLeft="100dp"
+            android:layout_marginRight="20dp"
+            android:hint="닉네임: 익명1"
+            />
 
-
-        <LinearLayout
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/date_edit"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="15dp"
-            android:gravity="center">
+            android:hint="날짜 : 2021-07-31" />
 
-            <Button
-                android:layout_width="150dp"
-                android:layout_height="35dp"
-                android:text="상담"
-                android:background="#E8FFE8"/>
+    </LinearLayout>
 
-            <Button
-                android:layout_width="150dp"
-                android:layout_height="35dp"
-                android:text="위로"
-                android:layout_marginLeft="15dp"
-                android:background="#E8FFE8"/>
-
-
-            <!-- <SearchView
-                 android:id="@+id/search"
-                 android:layout_width="match_parent"
-                 android:layout_height="match_parent"
-                 android:layout_marginLeft="15dp"
-                 android:layout_marginRight="15dp"
-                 android:queryHint="검색"/>-->
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-        </LinearLayout>
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/board_recyclerView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            >
-
-        </androidx.recyclerview.widget.RecyclerView>
-    </androidx.coordinatorlayout.widget.CoordinatorLayout>
-
-
-
-
-
-    <!--<com.google.android.material.navigation.NavigationView
-        android:id="@+id/nav_view"
-        android:layout_width="wrap_content"
+    <EditText
+        android:id="@+id/contents_edit"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:background="#FFFFFF"
-        android:fitsSystemWindows="true"
-        app:headerLayout="@layout/main_drawer_header"
-        app:menu="@menu/main_drawer"
-        app:srcCompat="@drawable/ic_nav"/>-->
-</androidx.drawerlayout.widget.DrawerLayout>
+        android:background="#cfcfcf"
+        android:hint="내용"
+        android:layout_below="@id/update_linearLayout"/>
+
+
+</RelativeLayout>
