--- a/src/main/res/layout/activity_board_update.xml
+++ b/src/main/res/layout/activity_board_update.xml
@@ -9,7 +9,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="내용보기"
+        android:text="수정하기"
         android:textSize="20dp"
         android:layout_marginBottom="10dp"
         android:layout_marginTop="10dp"
