--- a/src/main/res/layout/board_item.xml
+++ b/src/main/res/layout/board_item.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="#F44336"
-    android:layout_margin="10sp">
+    android:layout_margin="10dp">
     <TextView
         android:id="@+id/title"
         android:layout_width="wrap_content"
@@ -22,13 +22,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/title"
-        android:layout_marginLeft="80dp"
+        android:layout_marginLeft="40dp"
+        android:textColor="#FFFFFF"
         android:ellipsize="end"
         android:maxLines="1"
         android:padding="10sp"
         android:singleLine="true"
         android:text="닉네임: nickName5"
-        android:textColor="#FFFFFF"
         android:textSize="15sp" />
 
     <TextView
@@ -37,16 +37,28 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/title"
         android:layout_alignParentRight="true"
+        android:textColor="#FFEB3B"
         android:padding="10sp"
         android:text="날짜: 2021-07-01"
-        android:textColor="#FFEB3B"
+        android:layout_marginRight="10dp"
         android:textSize="15sp" />
+
+    <ImageView
+        android:id="@+id/btnUpdate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/ic_create_black_24dp"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="10dp"
+        />
+
     <ImageView
         android:id="@+id/btndel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:srcCompat="@drawable/ic_delete_black_24dp"
         android:layout_alignParentRight="true"
+        android:layout_below="@id/btnUpdate"
         />
 
 </RelativeLayout>
