--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="custom_3">#E8BD9B</color>
     <color name="custom_4">#FFFFFF</color>
     <color name="custom_5">#000000</color>
+    <color name="custom_6">#FFEB3B</color>
 </resources>
