18번째 Commit이다. ===> 색깔 바꾸기 및 게시판 버튼 보이게 하였다.

--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="custom_4">#FFFFFF</color>
     <color name="custom_5">#000000</color>
     <color name="custom_6">#FFEB3B</color>
+    <color name="final_color">#00E0FF</color>
 </resources>
