--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -13,8 +13,12 @@
         <item name="windowNoTitle">true</item>
     </style>
 
-    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
+    </style>
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="ToolbarColor" parent="AppTheme">
+        <item name="android:textColorSecondary">@color/custom_4</item>
+    </style>
 </resources>
