--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -47,7 +47,7 @@
                 android:layout_marginRight="0dp"
 
                 android:layout_marginBottom="2dp"
-                app:itemBackground="@color/custom_2"
+                app:itemBackground="@color/final_color"
                 app:itemIconSize="@android:dimen/app_icon_size"
                 app:itemIconTint="@drawable/item_color"
                 app:itemTextColor="@drawable/item_color"
@@ -60,13 +60,15 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="#FFFFFF"
+            android:background="@color/final_color"
             app:layout_anchor="@+id/appBarLayout"
             app:layout_anchorGravity="center"
             app:popupTheme="@style/AppTheme.PopupOverlay"
-
-        />
-
+            app:theme="@style/ToolbarColor"
+            />
+        <!-- app:theme="@style/ToolbarColor"
+        햄버거 아이콘을 하얀색으로 바꾸기 원래 검정색 이였다!!
+        -->
         <ImageView
             android:id="@+id/home_btn"
             android:layout_width="30dp"
@@ -75,7 +77,7 @@
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="false"
             android:layout_marginRight="10dp"
-            android:src="@drawable/ic_home"
+            app:srcCompat="@drawable/ic_home"
             app:layout_anchor="@+id/toolbar"
             app:layout_anchorGravity="end|center" />
 
@@ -88,6 +90,7 @@
             android:gravity="center"
             android:text="정신건강앱"
             android:textSize="20dp"
+            android:textColor="@color/custom_4"
             android:textStyle="bold"
             app:layout_anchor="@+id/toolbar"
             app:layout_anchorGravity="center" />
@@ -100,10 +103,10 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        android:background="#FFFFFF"
+        android:background="@drawable/navg_img"
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/main_drawer_header"
         app:menu="@menu/main_drawer"
-        android:src="@drawable/ic_nav"/>
+        app:srcCompat="@drawable/ic_nav"/>
 
 </androidx.drawerlayout.widget.DrawerLayout>
