--- a/src/main/res/layout/main_drawer_header.xml
+++ b/src/main/res/layout/main_drawer_header.xml
@@ -3,7 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="@dimen/nav_header_height"
-    android:background="#FFDFB5"
     android:gravity="bottom"
     android:orientation="vertical"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -11,6 +10,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
+    <!--   android:background="@drawable/navg_img"-->
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/imageView_morning"
@@ -18,7 +18,6 @@
         android:layout_height="match_parent"
         android:layout_marginTop="20dp"
         android:src="@drawable/person"
-        app:civ_border_color="#FFcccccc"
         app:civ_border_width="2dp" />
-
+     <!--app:civ_border_color="#FFcccccc"-->
 </LinearLayout>
