19번째 Commit이다. ===> CardView 색깔만 다음 주 월요일에 다시 정하자!!!

--- a/src/main/res/layout/fragment1.xml
+++ b/src/main/res/layout/fragment1.xml
@@ -27,7 +27,7 @@
             android:layout_margin="10dp"
             android:clickable="true"
             android:focusable="true"
-            app:cardBackgroundColor="#E4D393"
+            app:cardBackgroundColor="@color/final_color"
             app:cardCornerRadius="20dp"
             app:cardElevation="8dp">
 
@@ -45,7 +45,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="8dp"
-                        android:src="@drawable/ic_location" />
+                        app:srcCompat="@drawable/ic_location" />
 
                     <TextView
                         android:id="@+id/user_location"
@@ -134,7 +134,7 @@
             android:layout_margin="10dp"
             android:clickable="true"
             android:focusable="true"
-            app:cardBackgroundColor="#E4D393"
+            app:cardBackgroundColor="@color/final_color"
             app:cardCornerRadius="20dp"
             app:cardElevation="8dp">
 
@@ -215,21 +215,6 @@
                 </LinearLayout>
 
             </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:gravity="right">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/text_dayMood"
-                    android:text="나의 일별 기분 그래프 보기 >"
-                    android:layout_marginTop="175dp"
-                    android:textSize="18dp"
-                    android:layout_marginRight="10dp"/>
-            </LinearLayout>
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
@@ -239,7 +224,7 @@
             android:layout_margin="10dp"
             android:clickable="true"
             android:focusable="true"
-            app:cardBackgroundColor="#E4D393"
+            app:cardBackgroundColor="@color/final_color"
             app:cardCornerRadius="20dp"
             app:cardElevation="8dp">
 
