--- a/src/main/res/drawable/item_color.xml
+++ b/src/main/res/drawable/item_color.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_checked="true" android:color="#FFD384" />
-    <item android:color="#CFD8DC"  />
+    <item
+        android:state_checked="true"
+        android:color="#FF9800"/>
+    <item
+        android:color="#FFFFFF"/>
 </selector>
